--- a/quiz_page.html
+++ b/quiz_page.html
@@ -19,22 +19,22 @@
             </div>
           </nav> 
         </header>
-        <main style="margin-top: 40px;">
-             <h2 id="logo-container" href="/" class="brand-logo center">كلمات إنكليزية</h2>
+        <main style="margin-top: 20px;">
+             <h5 id="logo-container" href="/" class="brand-logo center">كلمات إنكليزية</h5>
              <div class="container"> 
               <p class="text-lighten-4 center">
-               تحدي كلمات إنكليزية كلمات إنكليزية- عدد الاسئلة 10
+              (1-10)
               </p>
               <br/>
-              <h5 id="logo-container" href="/" class="brand-logo center">معني كلمة Book هو ؟</h5>
+              <h2 id="logo-container" href="/" class="brand-logo center"> Book </h2>
               <div class="row  center-align">
-                <a class="waves-effect waves-light btn  quiz_scr" href="quiz_result.html">قلم</a>
+                <a class="waves-effect waves-light  btn btn-large home_scr" href="quiz_result.html">قلم</a>
               </div>
                <div class="row  center-align"> 
-                 <a class="waves-effect waves-light btn quiz_scr" href="quiz_result.html"> سبورة</a>
+                 <a class="waves-effect waves-light  btn btn-large home_scr" href="quiz_result.html"> سبورة</a>
               </div>
               <div class="row  center-align"> 
-                <a class="waves-effect waves-light btn quiz_scr" href="quiz_result.html" >كتاب</a>
+                <a class="waves-effect waves-light  btn btn-large home_scr" href="quiz_result.html" >كتاب</a>
                </div>
               </div>
         </main>
