--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <footer class="page-footer">
           <div class="container">
             <div class="row">
-                <h5 class="white-text">تطبيق تحدي</h5>
+                <h5 class="white-text">تطبيق  </h5>
                 <p class="grey-text text-lighten-4">
                      عن تطبيق تحدي عن تطبيق تحدي عن تطبيق تحديعن تطبيق تحدي.</p>
             </div>
