--- a/select_topic.html
+++ b/select_topic.html
@@ -24,7 +24,7 @@
       
         <main style="margin-top: 20px;">
              <h2 id="logo-container" class="brand-logo center">موضوع التحدي</h2>
-             <div class="container"><br/><br/><br/><br/>
+             <div class="container"><br/><br/>
                  <div class="row  center-align">
                    <a class="waves-effect waves-light btn btn-large home_scr" href="quiz_page.html">القران كريم</a>
                  </div>
