--- a/quiz_result.html
+++ b/quiz_result.html
@@ -36,9 +36,9 @@
               <h5   class="brand-logo center">الإجابات الخاظئة: 2</h5>
 
               <div class="row  center-align"><br/><br/>
-                <a class="waves-effect waves-light btn" href="quiz_page.html">إعادة الاختبار  <i class="material-icons">refresh</i>
+                <a class="waves-effect waves-light btn  btn-large" href="quiz_page.html">إعادة الاختبار  <i class="material-icons">refresh</i>
                 </a>
-                 <a class="waves-effect waves-light btn" href="select_topic.html">رجوع للقائمة  <i class="material-icons">undo</i>
+                 <a class="waves-effect waves-light btn  btn-large" href="select_topic.html">رجوع للقائمة  <i class="material-icons">undo</i>
                  </a>
               </div>
               </div>
