--- a/select_topic.html
+++ b/select_topic.html
@@ -26,7 +26,7 @@
              <h2 id="logo-container" class="brand-logo center">موضوع التحدي</h2>
              <div class="container" id="quiz_cat"><br/><br/>
 
-               <!--   <div class="row  center-align">
+                 <div class="row  center-align">
                    <a class="waves-effect waves-light btn btn-large home_scr" href="quiz_page.html">القران كريم</a>
                  </div>
                   <div class="row  center-align"> 
@@ -37,7 +37,7 @@
                   </div>
                  <div class="row  center-align"> 
                    <a class="waves-effect waves-light btn btn-large home_scr" href="quiz_page.html">معلومات عامة</a>
-                 </div> -->
+                 </div>
               </div>
         </main>
         <footer class="page-footer">
