--- a/quiz_page.html
+++ b/quiz_page.html
@@ -40,7 +40,7 @@
 <!-- <div class="buttonContainer"><button class="submit btn btn-success">Submit</button><button id="skip" class="submit btn btn-danger">Skip</button></div> -->
 <div class="buttonContainer"></div>
 <span></span>
-<h3 class="center-align"></h3>
+<h3 class="center-align" style="font-size: small;"></h3>
 <h4></h4>
 
     <div class="row  center-align" id="after_result_action" style="display: none;"> 
