--- a/quiz_page.html
+++ b/quiz_page.html
@@ -22,6 +22,7 @@
         <main style="margin-top: 20px;">
             <h5 id="logo-container" href="/" class="brand-logo center">كلمات إنكليزية</h5>
             <div class="container" id="quiz_q">
+              <p id="question_count" class="center" ></p>
 <div class="container quiz">
    <h2 id="randomquestion" class="brand-logo center" ></h2>
  <div class="row  center-align" id="opt">
@@ -43,7 +44,10 @@
 <h3 class="center-align" style="font-size: small;"></h3>
 <h4></h4>
 
-    <div class="row  center-align" id="after_result_action" style="display: none;"> 
+    <div class="row  center-align" id="after_result_action" style="display: none; background-color: gray;">
+      <p></p> 
+      <p id="correct_count"></p> 
+      <p id="rowng_count"></p> 
        <a class="waves-effect waves-light btn  btn-large" style="width:45%" href="index.html">إعادة الاختبار  <i class="material-icons">refresh</i>
         </a>
          <a class="waves-effect waves-light btn  btn-large" style="width: 45%" href="select_topic.html">رجوع للقائمة  <i class="material-icons">undo</i>
