--- a/quiz_page.html
+++ b/quiz_page.html
@@ -41,16 +41,18 @@
 <!-- <div class="buttonContainer"><button class="submit btn btn-success">Submit</button><button id="skip" class="submit btn btn-danger">Skip</button></div> -->
 <div class="buttonContainer"></div>
 <span></span>
-<h3 class="center-align" style="font-size: small;"></h3>
-<h4></h4>
 
-    <div class="row  center-align" id="after_result_action" style="display: none; background-color: gray;">
+
+
+    <div class="row  center-align" id="after_result_action"  style="display: none;">
+<h3 class="center-align" style="font-size: small;"></h3>
+     <h4></h4>
       <p></p> 
       <p id="correct_count"></p> 
       <p id="rowng_count"></p> 
-       <a class="waves-effect waves-light btn  btn-large" style="width:45%" href="index.html">إعادة الاختبار  <i class="material-icons">refresh</i>
+       <a class="waves-effect waves-light btn  btn-large" style="width:45%; " href="index.html">إعادة الاختبار  <i class="material-icons">refresh</i>
         </a>
-         <a class="waves-effect waves-light btn  btn-large" style="width: 45%" href="select_topic.html">رجوع للقائمة  <i class="material-icons">undo</i>
+         <a class="waves-effect waves-light btn  btn-large" style="width: 45%;  " href="select_topic.html">رجوع للقائمة  <i class="material-icons">undo</i>
      </a>
   </div>
 
