--- a/quiz_page.html
+++ b/quiz_page.html
@@ -50,11 +50,15 @@
       <p></p> 
       <p id="correct_count"></p> 
       <p id="rowng_count"></p> 
-       <a class="waves-effect waves-light btn  btn-large" style="width:45%; " href="index.html">إعادة الاختبار  <i class="material-icons">refresh</i>
-        </a>
-         <a class="waves-effect waves-light btn  btn-large" style="width: 45%;  " href="select_topic.html">رجوع للقائمة  <i class="material-icons">undo</i>
-     </a>
+      
   </div>
+<div  class="row  center-align" id="after_result_action_btn" style="display: none;">
+  <a class="waves-effect waves-light btn  btn-large" style="width:45%; " href="index.html">إعادة الاختبار  <i class="material-icons">refresh</i>
+  </a>
+   <a class="waves-effect waves-light btn  btn-large" style="width: 45%;  " href="select_topic.html">رجوع للقائمة  <i class="material-icons">undo</i>
+</a>
+</div>
+
 
 </div>
 </main>
