--- a/quiz_page.html
+++ b/quiz_page.html
@@ -26,16 +26,16 @@
 <div class="container quiz">
    <h2 id="randomquestion" class="brand-logo center" ></h2>
  <div class="row  center-align" id="opt">
-    <a class="waves-effect waves-light  btn btn-large home_scr" id="btn1"  ></a>
+    <a class="waves-effect waves-light  btn btn-large home_scr btn_opt" id="btn1"  ></a>
   </div>
    <div class="row  center-align"> 
-     <a class="waves-effect waves-light  btn btn-large home_scr" id="btn2"> </a>
+     <a class="waves-effect waves-light  btn btn-large home_scr btn_opt" id="btn2"> </a>
   </div>
   <div class="row  center-align"> 
-    <a class="waves-effect waves-light  btn btn-large home_scr"  id="btn3" ></a>
+    <a class="waves-effect waves-light  btn btn-large home_scr btn_opt"  id="btn3" ></a>
    </div>
    <div class="row  center-align"> 
-    <a class="waves-effect waves-light  btn btn-large home_scr"  id="btn4" ></a>
+    <a class="waves-effect waves-light  btn btn-large home_scr btn_opt"  id="btn4" ></a>
    </div>
 
 <!-- <div class="buttonContainer"><button class="submit btn btn-success">Submit</button><button id="skip" class="submit btn btn-danger">Skip</button></div> -->
