--- a/group/quiz_page.html
+++ b/group/quiz_page.html
@@ -5,9 +5,9 @@
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
        <!--our style.css-->
-      <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="../css/style.css"  media="screen,projection"/>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -38,8 +38,7 @@
     <a class="waves-effect waves-light  btn btn-large home_scr btn_opt"  id="btn4" ></a>
    </div>
 
-<!-- <div class="buttonContainer"><button class="submit btn btn-success">Submit</button><button id="skip" class="submit btn btn-danger">Skip</button></div> -->
-<div class="buttonContainer"></div>
+ <div class="buttonContainer"></div>
 <span></span>
 
 
@@ -53,10 +52,9 @@
       
   </div>
 <div  class="row  center-align" id="after_result_action_btn" style="display: none;">
-  <a class="waves-effect waves-light btn  btn-large" style="width:45%; " href="quiz_page.html">إعادة الاختبار  <i class="material-icons">refresh</i>
+  <a class="waves-effect waves-light btn  btn-large" style="width:45%; " href="group_result.html">عرض نتائج المجموعة<i class="material-icons">list</i>
   </a>
-   <a class="waves-effect waves-light btn  btn-large" style="width: 45%;  " href="index.html">رجوع للقائمة  <i class="material-icons">undo</i>
-</a>
+   
 </div>
 
 
@@ -83,6 +81,6 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="js/app.js"></script>
+<script src="../js/app.js"></script>
 </body>
 </html>
