--- a/group/create_group.html
+++ b/group/create_group.html
@@ -23,7 +23,7 @@
         <main style="margin-top: 60px;">
            <!--  <h5 id="logo-container"  class="brand-logo center">إسم المجموعة</h5> -->
             <div class="row center"><div class="col s6 offset-s3">
-                <form   onsubmit="passing()" method="POST" action="select_topic.html" >
+                <form   onsubmit="passing()" method="GET" action="select_topic.html" >
                     <div class="input-field ">
                       <input value=""    id="gname" type="text" class="col6 validate center">
                       <label class="active" for="first_name">إسم المجموعة</label>
