--- a/group/join_from_link.html
+++ b/group/join_from_link.html
@@ -23,7 +23,7 @@
         <main style="margin-top: 60px;">
             <h5 id="logo-container"  class="brand-logo center">إسم المجموعة: المجموعة أ</h5> 
            <div class="row center"><div class="col s6 offset-s3">
-               <form   onsubmit="passing()" method="POST" action="quiz_page.html" >
+               <form   onsubmit="passing()" method="GET" action="quiz_page.html" >
                    <div class="input-field ">
                      <input value=""    id="user_name" type="text" class="col6 validate center">
                      <label class="active" for="user_name">الاسم</label>
