--- a/group/group_result.html
+++ b/group/group_result.html
@@ -25,8 +25,18 @@
 
 
 
-
-
+        <ul class="collection">
+          <li class="collection-item">محمد: 50%</li>
+          <li class="collection-item">عمر: 80</li>
+          <li class="collection-item">عمر: 80</li>
+          <li class="collection-item">عمر: 80</li>
+          
+        </ul>
+        <div class="row  center-align"><br/><br/>
+           
+           <a class="waves-effect waves-light btn  btn-large" style="width: 40%" href="../index.html">رجوع للقائمة  <i class="material-icons">undo</i>
+           </a>
+        </div>
 
 
 
