--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
           </div> 
           <div class="footer-copyright">
-            <div class="container">Made by <a href="">Me </a></div>
+            <div class="container">Made by <a href="">Tahady App </a></div>
           </div>
         </footer>
       
