--- a/quiz_page.html
+++ b/quiz_page.html
@@ -20,7 +20,7 @@
           </nav>   
         </header>
         <main style="margin-top: 20px;">
-            <h5 id="logo-container" href="/" class="brand-logo center">كلمات إنكليزية</h5>
+            <h5 id="topic_name" href="/" class="brand-logo center">كلمات إنكليزية</h5>
             <div class="container" id="quiz_q">
               <p id="question_count" class="center" ></p>
 <div class="container quiz">
@@ -34,9 +34,9 @@
   <div class="row  center-align"> 
     <a class="waves-effect waves-light  btn btn-large home_scr btn_opt"  id="btn3" ></a>
    </div>
-   <div class="row  center-align"> 
+  <!--  <div class="row  center-align"> 
     <a class="waves-effect waves-light  btn btn-large home_scr btn_opt"  id="btn4" ></a>
-   </div>
+   </div> -->
 
 <!-- <div class="buttonContainer"><button class="submit btn btn-success">Submit</button><button id="skip" class="submit btn btn-danger">Skip</button></div> -->
 <div class="buttonContainer"></div>
@@ -84,5 +84,8 @@ crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="js/app.js"></script>
+<script>
+  
+</script>
 </body>
 </html>
