--- a/group/quiz_page.html
+++ b/group/quiz_page.html
@@ -34,10 +34,10 @@
   <div class="row  center-align"> 
     <a class="waves-effect waves-light  btn btn-large home_scr btn_opt"  id="btn3" ></a>
    </div>
-   <div class="row  center-align"> 
+   <!-- <div class="row  center-align"> 
     <a class="waves-effect waves-light  btn btn-large home_scr btn_opt"  id="btn4" ></a>
    </div>
-
+ -->
  <div class="buttonContainer"></div>
 <span></span>
 
