--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
        <!--our style.css-->
       <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
       <!--Let browser know website is optimized for mobile-->
+      <link rel="manifest" href="manifest.json" />
+      <link rel="apple-touch-icon" sizes="192x192" href="img/icons/icon-192x192.png">
+
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
@@ -48,7 +51,7 @@
         <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="js/materialize.min.js"></script>
       
-       <!--  <script src="js/bundle.js"></script> -->
+        <script src="js/app.js"></script>  
       </body>
       
   </html>
