--- a/quiz_page.html
+++ b/quiz_page.html
@@ -2,8 +2,8 @@
 <html lang="ar" dir="rtl"> 
 <head>
     <meta charset="utf-8">
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import Google Icon Font
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
        <!--our style.css-->
@@ -12,31 +12,29 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
-    <header>
-        <nav role="navigation">
-            <div class="nav-wrapper container">
-                 <a id="logo-container" href="/" class="brand-logo center">  تطبيق تحدي</a>
-            </div>
-          </nav>   
-        </header>
+       <header>
+           <nav role="navigation">
+              <div class="nav-wrapper container">
+                <a id="logo-container" href="/" class="brand-logo center">  تطبيق تحدي</a>
+              </div>
+           </nav>   
+       </header>
         <main style="margin-top: 20px;">
-            <h5 id="topic_name" href="/" class="brand-logo center">كلمات إنكليزية</h5>
-            <div class="container" id="quiz_q">
-              <p id="question_count" class="center" ></p>
-<div class="container quiz">
-   <h2 id="randomquestion" class="brand-logo center" ></h2>
- <div class="row  center-align" id="opt">
-    <a class="waves-effect waves-light  btn btn-large home_scr btn_opt" id="btn1"  ></a>
-  </div>
-   <div class="row  center-align"> 
-     <a class="waves-effect waves-light  btn btn-large home_scr btn_opt" id="btn2"> </a>
-  </div>
-  <div class="row  center-align"> 
-    <a class="waves-effect waves-light  btn btn-large home_scr btn_opt"  id="btn3" ></a>
-   </div>
-  <!--  <div class="row  center-align"> 
-    <a class="waves-effect waves-light  btn btn-large home_scr btn_opt"  id="btn4" ></a>
-   </div> -->
+        <h5 id="topic_name" href="/" class="brand-logo center">كلمات إنكليزية</h5>
+        <div class="container" id="quiz_q">
+        <p id="question_count" class="center" ></p>
+       <div class="container quiz">
+      <h2 id="randomquestion" class="brand-logo center" ></h2>
+    <!--   <div class="row  center-align" id="opt">
+        <a class="waves-effect waves-light  btn btn-large home_scr btn_opt" id="btn1"  ></a>
+      </div>
+      <div class="row  center-align"> 
+        <a class="waves-effect waves-light  btn btn-large home_scr btn_opt" id="btn2"> </a>
+      </div>
+      <div class="row  center-align"> 
+        <a class="waves-effect waves-light  btn btn-large home_scr btn_opt"  id="btn3" ></a>
+      </div> -->
+  <div id="options"></div>
 
 <!-- <div class="buttonContainer"><button class="submit btn btn-success">Submit</button><button id="skip" class="submit btn btn-danger">Skip</button></div> -->
 <div class="buttonContainer"></div>
@@ -44,16 +42,34 @@
 
 
 
-    <div class="row  center-align" id="after_result_action"  style="display: none;">
-<h3 class="center-align" style="font-size: small;"></h3>
+    <div class="center-align" id="after_result_action"  style="display: none;">
+      <div class="row">
+        <div class="col s12 m12">
+          <div class="card   darken-1">
+            <div class="card-content black-text">
+              <span class="card-title">النتيجة!</span>
+              <p id="points"> الدرجة</p>
+              <p id="correct_count"> الاجابات لصحيحة</p>
+              <p id="rowng_count"> الاجابات الخاطئة</p>
+             
+            </div>
+           <!--  <div class="card-action">
+              <a href="#">This is a link</a>
+              <a href="#">This is a link</a>
+            </div> -->
+          </div>
+        </div>
+      </div>
+
+<!-- <h3 class="center-align" style="font-size: small;"></h3>
      <h4></h4>
       <p></p> 
       <p id="correct_count"></p> 
-      <p id="rowng_count"></p> 
+      <p id="rowng_count"></p>  -->
       
   </div>
 <div  class="row  center-align" id="after_result_action_btn" style="display: none;">
-  <a class="waves-effect waves-light btn  btn-large" style="width:45%; " href="quiz_page.html">إعادة الاختبار  <i class="material-icons">refresh</i>
+  <a class="waves-effect waves-light btn  btn-large" style="width:45%; " onclick="location.reload()"  >إعادة الاختبار  <i class="material-icons">refresh</i>
   </a>
    <a class="waves-effect waves-light btn  btn-large" style="width: 45%;  " href="index.html">رجوع للقائمة  <i class="material-icons">undo</i>
 </a>
@@ -81,9 +97,9 @@
 src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="js/app.js"></script>
+ --><script src="js/app.js"></script>
 <script>
   
 </script>
