--- a/select_topic.html
+++ b/select_topic.html
@@ -43,7 +43,7 @@
           $.ajax({
       method : 'GET',
       dataType: 'json',
-      url:'http://localhost/tahaddy_dash/public/topics',
+      url:'http://adilmobarek.com/tahaddy_dash/public/topics',
       success:function newQuestion(data){
         const container = document.querySelector("#quiz_cat");
         /*  const topics = [
