--- a/select_topic.html
+++ b/select_topic.html
@@ -34,16 +34,14 @@
        
       
         <script src="js/jquery-3.5.1.js"></script>
-      <!--   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script> -->
         <script src="js/materialize.min.js"></script>
-      <!--   <script src="js/app.js"></script> -->
-       <!--  <script src="js/bundle.js"></script> -->
+        <script src="js/config.js"></script>
        <script>
          jQuery(document).ready(function(){
           $.ajax({
       method : 'GET',
       dataType: 'json',
-      url:'http://adilmobarek.com/tahaddy_dash_sidbar/public/topics',
+      url:api_url+'public/topics',
       success:function newQuestion(data){
         const container = document.querySelector("#quiz_cat");
         /*  const topics = [
