--- a/quiz_page.html
+++ b/quiz_page.html
@@ -15,7 +15,7 @@
        <header >
            <nav role="navigation" style="background-color: #fff;">
               <div class="nav-wrapper container">
-                <a style="color: #1cb0f6 ;" id="logo-container" href="#" class="brand-logo center"> <b>تطبيق نور</b> إختبارات </a>
+                <a style="color: #1cb0f6 ;" id="logo-container" href="#" class="brand-logo center">  تطبيق نور - إختبارات </a>
               </div>
            </nav>   
        </header>
