--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                  <div class="col s12">
                   <h2 class="home_scr" style="width: 100% !important;"><b>تطبيق نور</b> إختبارات </h2>
                 </div>
-              </div><br><br><br>
+              </div> 
 
               <div class="row">
                  <div class="col s6"><br><br>
@@ -36,7 +36,7 @@
                   </div>
                </div>
                
-                 <br><br><br><br>
+             
                   <div class="row">
                     <a class="waves-effect waves-light btn btn-large  start_btn" href="select_topic.html">إبداء الأن</a>
                   </div>
