--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
               </div> 
 
               <div class="row">
-                 <div class="col s6"><br><br>
+                 <div class="col s12 m6"><br><br>
                     <img src="img/home_img.svg" style="width: 80%; height:auto">
                   </div>
-                  <div class="col s6">
+                  <div class="col m6 s12 ">
                     <h4>أفضل طريقة لإختبار معرفتك، مجانا!</h4>
                     <p> تطبيق نور هو شريك مجاني في مساعدة الطلاب علي إخبار قدراتهم في المواد المختلفة، نستخدم اسلوب فعال لعرض الاسئلة و عرض نتائج الاختبار</p>
                   </div>
