--- a/quiz_page.html
+++ b/quiz_page.html
@@ -29,7 +29,7 @@
             <div class="col s2"> <span id="question_count" > </span></div>
             </div>
        <div class="container quiz">
-      <h2 id="randomquestion" class="brand-logo center" ></h2>
+      <p id="randomquestion" class="brand-logo center" ></p>
   
   <div id="options"></div>
 
